chore: add neo4j config